# MongoLite

./: .gitignore  ARCHITECTURE_REFACTOR_SUMMARY.md  LICENSE  demo.py  example.py  import_chunks.py  query_chunks.py  test_aggregation.py  test_complex_queries.py  test_count.py  test_delete.py  test_distinct.py  test_find_options.py  test_indexes.py  test_mongolite.py  test_refactoring_complete.py  test_reopen_fixed.py  test_transactions.py  test_update.py
.github/workflows/: build-wheels.yml  test-windows.yml
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
examples/: 01_basic_crud.py  02_query_operators.py  03_logical_operators.py  04_update_operators.py  05_count_distinct.py  06_real_world_blog.py  README.md
ironbase-core/src/: btree.rs  database.rs  index.rs  transaction.rs  wal.rs
ironbase-core/src/storage/: compaction.rs  mod.rs
mongolite-core/: Cargo.toml
mongolite-core/benches/: benchmarks.rs
mongolite-core/src/: aggregation.rs  btree.rs  collection_core.rs  document.rs  error.rs  find_options.rs  index.rs  lib.rs  query.rs  query_planner.rs  transaction.rs  transaction_benchmarks.rs  transaction_integration_tests.rs  transaction_property_tests.rs  wal.rs
mongolite-core/src/storage/: compaction.rs  io.rs  metadata.rs  mod.rs
mongolite-core/tests/: compaction_tests.rs  explain_hint_tests.rs  index_integration_tests.rs  index_performance_tests.rs  integration_tests.rs  property_tests.rs
