[package]
name = "mongolite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure Rust core library for MongoLite - embedded document database"

[lib]
name = "mongolite_core"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies (pure Rust only, NO PyO3)
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
bincode = { workspace = true }
crc32fast = "1.4"  # For WAL checksums

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.4"
# criterion = { version = "0.3", default-features = false }  # Disabled - needs Rust 1.80+

# [[bench]]
# name = "benchmarks"
# harness = false
