[package]
name = "mongolite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for MongoLite - embedded document database"

[lib]
name = "mongolite"
crate-type = ["cdylib"]

[dependencies]
# Core library
mongolite-core = { path = "../../mongolite-core" }

# Python binding
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Workspace dependencies
serde_json = { workspace = true }
